adding more elements and texts, adjusting grid for mobile

--- a/src/index.html
+++ b/src/index.html
@@ -42,39 +42,36 @@
   <section class="section section--banner bg--purple">
     <div class="container-fluid">
       <div class="row h-100">
-        <div class="col-6 d-flex">
+        <div class="order-2 order-lg-1 col-12 col-lg-6 d-flex">
           <img src="assets/img/urso.png" alt="Imagem de destaque" class="align-self-center">
         </div>
-        <div class="col-6">
+        <div class="order-1 order-lg-2 col-12 col-lg-6">
           <h2><em>A Poluição Indoor</em> existe.
             Sua casa está protegida?</h2>
           <h4>Elimine a Poluição Indoor agora com QuietPure</h4>
-          <div class="col-8 ilustrative_image">
-            <img src="assets/img/produto.png" alt="Produto da quiet pure">
-          </div>
+        </div>
+        <div class="order-3 col-6 col-lg-8 ilustrative_image">
+          <img src="assets/img/produto.png" alt="Produto da quiet pure">
         </div>
       </div>
     </div>
   </section>
   <section class="section" id="o-produto">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-7">Imagem</div>
-        <div class="col-4">
-          <h3>Elimine
-            até 99,97%
-            da Poluição
-            Indoor!</h3>
+      <div class="row justify-content-center ">
+        <div class="col-6 col-lg-7">Imagem</div>
+        <div class="col-6 col-lg-4">
+          <h3 class="color--purple">Elimine até 99,97% da Poluição Indoor!</h3>
           <p>Você sabia que ambientes internos podem abrigar muito mais poluição do que uma avenida na hora do rush? O purificador Quiet Pure foi projetado para eliminar a poluição indoor da sua casa ou escritório.</p>
         </div>
-        <div class="col-12">
-          <h3>Mas o que é Poluição Indoor?</h3>
+        <div class="col-12 text-center">
+          <h3 class="color--yellow ">Mas o que é Poluição Indoor?</h3>
           <p>O fumo, a queima de gases em fogões e aquecedores, assim como químicos em móveis, desodorantes, aromatizadores de ar e produtos de limpeza doméstica. Ácaros, mofo e pelos de animais de estimação também completam a lista. Isso tudo somado àquela poeira externa já conhecida das grandes cidades deixam a sua casa e seu escritório com ar muito pouco saudável.</p>
         </div>
         <div class="col-12">
           Imagem
         </div>
-        <div class="col-12">
+        <div class="col-12 text-center">
           <p>Pouca gente sabe disso, mas a poluição do ar encontrada dentro de casa pode comprometer seriamente a sua saúde. Quando pensamos em poluição geralmente imaginamos aquela fumaça preta saindo de chaminés de fábricas ou escapamentos de carro. Mas a poluição indoor é causada por diversos fatores.</p>
         </div>
         <div class="col-12">
@@ -85,12 +82,12 @@
   </section>
   <section class="section" id="como-funciona">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <h3>Como Quiet Pure funciona?</h3>
+      <div class="row justify-content-center ">
+        <div class="col-12 text-center">
+          <h3 class="color--purple">Como Quiet Pure funciona?</h3>
           <p>O Purificador Quiet Pure possui 4 diferentes tecnologias de purificação de ar.</p>
         </div>
-        <div class="col-12">
+        <div class="col-10">
           <div class="card card--square bg--purple">
             <div class="box">1</div>
             <div class="box">2</div>
@@ -103,25 +100,159 @@
         </div>
         <div class="col-12">
           <div class="card card--crop bg--green">
-            <div class="offset-1 col-3">
-              Texto
+            <div class="row justify-content-center">
+              <div class="col-6 offset-lg-1 col-lg-3">
+                <h3>Troca do filtro.</h3>
+                <p>O purificador Quiet Pure exige muito pouca manutenção. O único item que necessita de troca periódica é o filtro HEPA. O Quiet Pure avisa, através de um indicador no painel, que é hora de fazer a troca de maneira simples e rápida. Você mesmo pode realizar a manutenção.</p>
+              </div>
+              <div class="col-10 offset-lg-1 col-lg-6">
+                Imagem
+              </div>
+              <div class="col-lg-1"></div>
             </div>
-            <div class="offset-1">
-              Imagem
+          </div>
+        </div>
+        <div class="col-12 text-center">
+          <h3 class="color--purple">Elimine a Poluição Indoor agora.</h3>
+          <p>O purificador de ar Quiet Pure foi projetado para cumprir uma única missão: eliminar a poluição indoor dos ambientes internos do nosso dia a dia.</p>
+        </div>
+        <div class="col-12">Imagem</div>
+        <div class="col-12 col-lg-7">
+          Imagem
+        </div>
+        <div class="col-12 col-lg-5">
+          <h3 class="color--light-blue">Design.</h3>
+          <p>Seu design minimalista e estrutura compacta combinam perfeitamente com a sua decoração, enquanto seu sistema de tripla filtragem combina com a saúde da sua família.</p>
+          <h3 class="color--light-blue">Tecnologia aprovada pela NASA.</h3>
+          <p>Você não precisa ser especialista em engenharia e física para saber que a NASA trabalha nas condições mais extremas e isso pede as mais avançadas tecnologias. O sistema de purificação indoor do Quiet Pure é utilizado pelos astronautas num dos ambientes mais fechados que que existe: a estação espacial internacional.</p>
+          Imagem
+        </div>
+        <div class="col-12">
+          Imagem
+        </div>
+        <div class="col-12">
+          <div class="card card--crop bg--green">
+            <div class="row justify-content-center ">
+              <div class="offset-lg-1 col-10 col-lg-6">
+                Imagem
+              </div>
+              <div class="offset-lg-1 col-6 col-lg-3">
+              <h3>Especificações técnicas.</h3>
+              <p>Fluxo de ar: 160 CFM<br>
+                Taxa de filtragem: acima de 99,97%<br>
+                Quantidade de filtros: 3<br>
+                Sensores de qualidade de ar: PM2.5 e VOC<br>
+                Cores de luz ambiente: 16.7 milhões<br>
+                Peso: 5 kg<br>
+                Consumo de energia: 25-65W<br>
+                Área de alcance: acima de 52m2</p>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
+  <section class="section--silux" id="a-silux">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+      <div class="col-12 offset-lg-1 col-lg-3">
+        Image
+      </div>
+      <div class="col-12 offset-lg-1 col-lg-6">
+        <p>A Silux é a unidade de negócios do Grupo Ecoquest responsável pela prestação de serviços de descontaminação de ambientes interiores.<br>
+          Criada em maio de 2008, utiliza a tecnologia RCI para eliminar odores, gases voláteis, fumaça e até 99,99% de fungos e bactérias de locais fechados, e trata não só o ar, mas a superfície e os objetos que ali permanecem durante a descontaminação. No final de 2008, a Silux passou a atuar em locação mensal de equipamentos utilizados por hotéis, empresas imobiliárias e outros segmentos em todo o mundo para a remoção completa de odores, como o cigarro e o mofo dos quartos e salas.</p>
+        <a href="#">Saiba Mais</a>
+      </div>
+    </div>
+    </div>
+  </section>
+  <section class="section" id="faq">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+      <div class="col-12">
+        <h3 class="color--green text-center">Perguntas frequentes.</h3>
+        <ul class="accordeon">
+          <li>
+            <div class="question question--active">
+              Pergunta
+            </div>
+            <div class="answer">Resposta</div>
+          </li>
+          <li>
+            <div class="question">
+              Pergunta
+            </div>
+            <div class="answer">Resposta</div>
+          </li>
+        </ul>
+        <a href="#" class="see-more">Veja mais</a>
+      </div>
+    </div>
+    </div>
+  </section>
+  <section class="section" id="contato">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <h3 class="color--purple text-center">Contato.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <div class="card card--square bg--purple">
+            <div class="row justify-content-center">
+              <div class="col-6">
+                <form>
+                <div class="input-group">
+                  <label for="">Seu nome (campo obrigatório)</label>
+                  <input type="text">
+                </div>
+                <div class="input-group">
+                  <label for="">Seu e-mail (campo obrigatório)</label>
+                  <input type="text">
+                </div>
+                <div class="input-group">
+                  <label for="">Sua mensagem</label>
+                  <textarea></textarea>
+                </div>
+                <div class="input-group">
+                  <button class="btn btn--green" type="submit"></button>
+                </div>
+              </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section class="section" id="a-silux">
-
-  </section>
-  <section class="section" id="o-produto"></section>
 </main>
 
-<footer>
-
+<footer class="footer">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="order-3 order-lg-1 col-12 offset-lg-2 col-lg-5">
+        <h5><em>A poluição indoor</em> existe.
+        Quiet Pure ajuda você a deixar
+        sua casa ou escritório protegidos.</h5>
+        <div class="footer__social d-none d-lg-block">
+          <a href="">Facebook</a>
+          <a href="">Instagram</a>
+          <a href="">Twitter</a>
+          <a href="">Youtube</a>
+        </div>
+      </div>
+      <div class="order-1 order-lg-2 col-12 d-block d-lg-none">
+        <div class="footer__social">
+          <a href="">Facebook</a>
+          <a href="">Instagram</a>
+          <a href="">Twitter</a>
+          <a href="">Youtube</a>
+        </div>
+      </div>
+      <div class="order-2 order-lg-3 offset-1 col-2">Imagem</div>
+    </div>
+  </div>
 </footer>
 <script src="assets/js/scripts.min.js"></script>
 </body>
