--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <title>QuietPure</title>
 
@@ -88,11 +88,23 @@
           <p>O Purificador Quiet Pure possui 4 diferentes tecnologias de purificação de ar.</p>
         </div>
         <div class="col-10">
-          <div class="card card--square bg--purple">
-            <div class="box">1</div>
-            <div class="box">2</div>
-            <div class="box">3</div>
-            <div class="box">4</div>
+          <div class="card card--square ">
+            <div class="box bg--purple">
+              <h5>HEPA</h5>
+              <p>O filtro HEPA é capaz de capturar até 99,97% das mais microscópicas partículas de poluição indoor.</p>
+            </div>
+            <div class="box bg--purple">
+              <h5>Carvão Ativado</h5>
+              <p>A camada de carvão ativado bloqueia partículas maiores de poluição e reduz odores indesejados.</p>
+            </div>
+            <div class="box bg--purple">
+              <h5>Ionização</h5>
+              <p>A ionização é capaz de retirar do ar respirável milhares de materiais particulados, poeira e outros alergênios, incluindo fungos e bactérias, que estejam suspensos no ar.</p>
+            </div>
+            <div class="box bg--purple">
+              <h5>Active Pure</h5>
+              <p>A tecnologia Active Pure produz um plasma gasoso baseado em oxidantes naturais, derivados de Hidrogênio e Oxigênio, que combatem ativamente a poluição indoor até nos cantos de acesso mais remotos do seu ambiente.</p>
+            </div>
           </div>
         </div>
         <div class="col-12">
