[wip] body content style of landing page

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 <main class="main">
   <section class="section section--banner bg--purple">
     <div class="container-fluid">
-      <div class="row h-100">
+      <div class="row h-100 banner-wrapper">
         <div class="order-2 order-lg-1 col-12 col-lg-6 d-flex">
           <img src="assets/img/urso.png" alt="Imagem de destaque" class="align-self-center">
         </div>
@@ -50,32 +50,44 @@
             Sua casa está protegida?</h2>
           <h4>Elimine a Poluição Indoor agora com QuietPure</h4>
         </div>
-        <div class="order-3 col-6 col-lg-8 ilustrative_image">
+        <div class="order-3 col-6 offset-lg-6 ilustrative_image">
           <img src="assets/img/produto.png" alt="Produto da quiet pure">
         </div>
       </div>
     </div>
   </section>
-  <section class="section" id="o-produto">
-    <div class="container-fluid">
-      <div class="row justify-content-center ">
-        <div class="col-6 col-lg-7">Imagem</div>
-        <div class="col-6 col-lg-4">
-          <h3 class="color--purple">Elimine até 99,97% da Poluição Indoor!</h3>
-          <p>Você sabia que ambientes internos podem abrigar muito mais poluição do que uma avenida na hora do rush? O purificador Quiet Pure foi projetado para eliminar a poluição indoor da sua casa ou escritório.</p>
+  <section class="section product" id="o-produto">
+    <div class="container-fluid product__intro">
+      <div class="row justify-content-center">
+        <div class="col-6 offset-lg-7 col-lg-4">
+          <div class="product__text-wrapper product__text-wrapper--intro">
+            <h3 class="color--purple">Elimine até 99,97% da Poluição Indoor!</h3>
+            <p>Você sabia que ambientes internos podem abrigar muito mais poluição do que uma avenida na hora do rush? O purificador Quiet Pure foi projetado para eliminar a poluição indoor da sua casa ou escritório.</p>
+          </div>
         </div>
-        <div class="col-12 text-center">
-          <h3 class="color--yellow ">Mas o que é Poluição Indoor?</h3>
-          <p>O fumo, a queima de gases em fogões e aquecedores, assim como químicos em móveis, desodorantes, aromatizadores de ar e produtos de limpeza doméstica. Ácaros, mofo e pelos de animais de estimação também completam a lista. Isso tudo somado àquela poeira externa já conhecida das grandes cidades deixam a sua casa e seu escritório com ar muito pouco saudável.</p>
+      </div>
+    </div>
+
+    <div class="container-fluid product__info">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-10 offset-lg-1 text-center">
+          <div class="product__text-wrapper product__text-wrapper--info">
+            <h3 class="color--yellow ">Mas o que é Poluição Indoor?</h3>
+            <p>O fumo, a queima de gases em fogões e aquecedores, assim como químicos em móveis, desodorantes, aromatizadores de ar e produtos de limpeza doméstica. Ácaros, mofo e pelos de animais de estimação também completam a lista. Isso tudo somado àquela poeira externa já conhecida das grandes cidades deixam a sua casa e seu escritório com ar muito pouco saudável.</p>
+          </div>
         </div>
-        <div class="col-12">
-          Imagem
-        </div>
-        <div class="col-12 text-center">
+      </div>
+    </div>
+
+    <div class="container-fluid product__example">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8 text-center">
           <p>Pouca gente sabe disso, mas a poluição do ar encontrada dentro de casa pode comprometer seriamente a sua saúde. Quando pensamos em poluição geralmente imaginamos aquela fumaça preta saindo de chaminés de fábricas ou escapamentos de carro. Mas a poluição indoor é causada por diversos fatores.</p>
         </div>
         <div class="col-12">
-          Imagem
+          <div class="product__image">
+            <img src="assets/img/icones.png " alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -84,24 +96,26 @@
     <div class="container-fluid">
       <div class="row justify-content-center ">
         <div class="col-12 text-center">
-          <h3 class="color--purple">Como Quiet Pure funciona?</h3>
-          <p>O Purificador Quiet Pure possui 4 diferentes tecnologias de purificação de ar.</p>
+          <div class="product__text-wrapper product__text-wrapper--operation">
+            <h3 class="color--purple">Como Quiet Pure funciona?</h3>
+            <p>O Purificador Quiet Pure possui 4 diferentes tecnologias de purificação de ar.</p>
+          </div>
         </div>
-        <div class="col-10">
-          <div class="card card--square ">
-            <div class="box bg--purple">
+        <div class="col-10 product__operation">
+          <div class="card card--square bg--purple">
+            <div class="box box--top box--left">
               <h5>HEPA</h5>
               <p>O filtro HEPA é capaz de capturar até 99,97% das mais microscópicas partículas de poluição indoor.</p>
             </div>
-            <div class="box bg--purple">
+            <div class="box box--top">
               <h5>Carvão Ativado</h5>
               <p>A camada de carvão ativado bloqueia partículas maiores de poluição e reduz odores indesejados.</p>
             </div>
-            <div class="box bg--purple">
+            <div class="box box--left">
               <h5>Ionização</h5>
               <p>A ionização é capaz de retirar do ar respirável milhares de materiais particulados, poeira e outros alergênios, incluindo fungos e bactérias, que estejam suspensos no ar.</p>
             </div>
-            <div class="box bg--purple">
+            <div class="box">
               <h5>Active Pure</h5>
               <p>A tecnologia Active Pure produz um plasma gasoso baseado em oxidantes naturais, derivados de Hidrogênio e Oxigênio, que combatem ativamente a poluição indoor até nos cantos de acesso mais remotos do seu ambiente.</p>
             </div>
