--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,11 @@
       <div class="col-lg-4 col-xl-2">
         <h1 class="logo"><img src="assets/img/logo.png" alt="QuietPure"></h1>
       </div>
-      <div class="d-none d-xl-flex offset-lg-1 col-lg-6">
+      <div class="col-12 offset-lg-1 col-lg-6">
         <nav class="menu">
           <ul class="menu__list">
-            <li class="menu__item"><a href="#o-produto">O produto</a></li>
-            <li class="menu__item"><a href="#como-funciona">Como funciona</a></li>
+            <li class="menu__item"><a href="#o-produto">O Produto</a></li>
+            <li class="menu__item"><a href="#como-funciona">Como Funciona</a></li>
             <li class="menu__item"><a href="#a-silux">A Silux</a></li>
             <li class="menu__item"><a href="#faq">F.A.Q.</a></li>
           </ul>
@@ -33,7 +33,15 @@
       <div class="d-none d-xl-flex offset-lg-1 col-lg-2">
         <a href="#comprar" class="btn btn--uppercase btn--coral">Comprar</a>
       </div>
-      <div id="openMenu" class="header__icon icon icon--open d-xl-none">OPEN/CLOSE MENU</div>
+      <div id="openMenu" class="header__icon d-xl-none">
+        <div class="wrapper">
+          <div class="icon">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </header>
