initial style for 1920 completed

--- a/src/index.html
+++ b/src/index.html
@@ -122,57 +122,83 @@
           </div>
         </div>
         <div class="col-12">
-          Imagem
+          <div class="product__image product__image--pad-big">
+            <img src="assets/img/quietpure-operation.jpg" alt="">
+          </div>
         </div>
         <div class="col-12">
           <div class="card card--crop bg--green">
             <div class="row justify-content-center">
-              <div class="col-6 offset-lg-1 col-lg-3">
-                <h3>Troca do filtro.</h3>
-                <p>O purificador Quiet Pure exige muito pouca manutenção. O único item que necessita de troca periódica é o filtro HEPA. O Quiet Pure avisa, através de um indicador no painel, que é hora de fazer a troca de maneira simples e rápida. Você mesmo pode realizar a manutenção.</p>
+              <div class="col-6 offset-lg-1 col-lg-4">
+                <div class="product__text-wrapper product__text-wrapper--filter">
+                  <h3>Troca do filtro.</h3>
+                  <p>O purificador Quiet Pure exige muito pouca manutenção. O único item que necessita de troca periódica é o filtro HEPA. O Quiet Pure avisa, através de um indicador no painel, que é hora de fazer a troca de maneira simples e rápida. Você mesmo pode realizar a manutenção.</p>
+                </div>
               </div>
-              <div class="col-10 offset-lg-1 col-lg-6">
-                Imagem
+              <div class="col-10 col-lg-6">
+                <div class="product__image product__image--pad-none">
+                  <img src="assets/img/quietpure-filter.jpg" alt="">
+                </div>
               </div>
-              <div class="col-lg-1"></div>
             </div>
           </div>
         </div>
-        <div class="col-12 text-center">
-          <h3 class="color--purple">Elimine a Poluição Indoor agora.</h3>
-          <p>O purificador de ar Quiet Pure foi projetado para cumprir uma única missão: eliminar a poluição indoor dos ambientes internos do nosso dia a dia.</p>
+        <div class="col-7 text-center">
+          <div class="product__text-wrapper product__text-wrapper--room">
+            <h3 class="color--purple">Elimine a Poluição Indoor agora.</h3>
+            <p>O purificador de ar Quiet Pure foi projetado para cumprir uma única missão: eliminar a poluição indoor dos ambientes internos do nosso dia a dia.</p>
+          </div>
         </div>
-        <div class="col-12">Imagem</div>
-        <div class="col-12 col-lg-7">
-          Imagem
+      </div>
+    </div>
+    <div class="product__image product__image--no-container">
+      <img src="assets/img/quietpure-room.jpg" alt="">
+    </div>
+    <div class="container-fluid product__design">
+      <div class="row justify-content-center">
+        <div class="col-12 offset-lg-7 col-lg-5">
+          <div class="product__design-content">
+            <div class="product__text-wrapper product__text-wrapper--design">
+              <h3 class="color--green">Design.</h3>
+              <p>Seu design minimalista e estrutura compacta combinam perfeitamente com a sua decoração, enquanto seu sistema de tripla filtragem combina com a saúde da sua família.</p>
+            </div>
+            <div class="product__text-wrapper product__text-wrapper--design">
+              <h3 class="color--green">Tecnologia aprovada pela NASA.</h3>
+              <p>Você não precisa ser especialista em engenharia e física para saber que a NASA trabalha nas condições mais extremas e isso pede as mais avançadas tecnologias. O sistema de purificação indoor do Quiet Pure é utilizado pelos astronautas num dos ambientes mais fechados que que existe: a estação espacial internacional.</p>
+            </div>
+            <div class="product__image">
+              <img src="assets/img/selo-nasa.jpg" alt="">
+            </div>
+          </div>
         </div>
-        <div class="col-12 col-lg-5">
-          <h3 class="color--light-blue">Design.</h3>
-          <p>Seu design minimalista e estrutura compacta combinam perfeitamente com a sua decoração, enquanto seu sistema de tripla filtragem combina com a saúde da sua família.</p>
-          <h3 class="color--light-blue">Tecnologia aprovada pela NASA.</h3>
-          <p>Você não precisa ser especialista em engenharia e física para saber que a NASA trabalha nas condições mais extremas e isso pede as mais avançadas tecnologias. O sistema de purificação indoor do Quiet Pure é utilizado pelos astronautas num dos ambientes mais fechados que que existe: a estação espacial internacional.</p>
-          Imagem
-        </div>
+      </div>
+    </div>
+    <div class="product__image product__image--no-container product__image--pad-none">
+      <img src="assets/img/quietpure-couch.jpg" alt="">
+    </div>
+    <div class="container-fluid">
+      <div class="row justify-content-center">
         <div class="col-12">
-          Imagem
-        </div>
-        <div class="col-12">
-          <div class="card card--crop bg--green">
+          <div class="card card--crop card--small bg--green">
             <div class="row justify-content-center ">
               <div class="offset-lg-1 col-10 col-lg-6">
-                Imagem
+                <div class="product__image product__image--pad-none">
+                  <img src="assets/img/quietpure-dimension.jpg" alt="">
+                </div>
               </div>
-              <div class="offset-lg-1 col-6 col-lg-3">
-              <h3>Especificações técnicas.</h3>
-              <p>Fluxo de ar: 160 CFM<br>
-                Taxa de filtragem: acima de 99,97%<br>
-                Quantidade de filtros: 3<br>
-                Sensores de qualidade de ar: PM2.5 e VOC<br>
-                Cores de luz ambiente: 16.7 milhões<br>
-                Peso: 5 kg<br>
-                Consumo de energia: 25-65W<br>
-                Área de alcance: acima de 52m2</p>
-            </div>
+              <div class="offset-lg-1 col-6 col-lg-4">
+                <div class="product__text-wrapper product__text-wrapper--dimension">
+                  <h3>Especificações técnicas.</h3>
+                  <p>Fluxo de ar: 160 CFM<br>
+                    Taxa de filtragem: acima de 99,97%<br>
+                    Quantidade de filtros: 3<br>
+                    Sensores de qualidade de ar: PM2.5 e VOC<br>
+                    Cores de luz ambiente: 16.7 milhões<br>
+                    Peso: 5 kg<br>
+                    Consumo de energia: 25-65W<br>
+                    Área de alcance: acima de 52m2</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -180,74 +206,82 @@
   </section>
   <section class="section--silux" id="a-silux">
     <div class="container-fluid">
-      <div class="row justify-content-center">
-      <div class="col-12 offset-lg-1 col-lg-3">
-        Image
+      <div class="row justify-content-center align-items-center">
+        <div class="col-12 offset-lg-1 col-lg-3">
+          <div class="product__image product__image--pad-none">
+            <img src="assets/img/logo-silux.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-12 offset-lg-1 col-lg-6">
+          <p>A Silux é a unidade de negócios do Grupo Ecoquest responsável pela prestação de serviços de descontaminação de ambientes interiores.<br>
+            Criada em maio de 2008, utiliza a tecnologia RCI para eliminar odores, gases voláteis, fumaça e até 99,99% de fungos e bactérias de locais fechados, e trata não só o ar, mas a superfície e os objetos que ali permanecem durante a descontaminação. No final de 2008, a Silux passou a atuar em locação mensal de equipamentos utilizados por hotéis, empresas imobiliárias e outros segmentos em todo o mundo para a remoção completa de odores, como o cigarro e o mofo dos quartos e salas.</p>
+          <a class="color--purple product__link" target="_blank" href="silux.com.br">Saiba Mais</a>
+        </div>
       </div>
-      <div class="col-12 offset-lg-1 col-lg-6">
-        <p>A Silux é a unidade de negócios do Grupo Ecoquest responsável pela prestação de serviços de descontaminação de ambientes interiores.<br>
-          Criada em maio de 2008, utiliza a tecnologia RCI para eliminar odores, gases voláteis, fumaça e até 99,99% de fungos e bactérias de locais fechados, e trata não só o ar, mas a superfície e os objetos que ali permanecem durante a descontaminação. No final de 2008, a Silux passou a atuar em locação mensal de equipamentos utilizados por hotéis, empresas imobiliárias e outros segmentos em todo o mundo para a remoção completa de odores, como o cigarro e o mofo dos quartos e salas.</p>
-        <a href="#">Saiba Mais</a>
-      </div>
-    </div>
     </div>
   </section>
-  <section class="section" id="faq">
+  <section class="section section--faq text-center" id="faq">
     <div class="container-fluid">
       <div class="row justify-content-center">
-      <div class="col-12">
-        <h3 class="color--green text-center">Perguntas frequentes.</h3>
-        <ul class="accordeon">
-          <li>
-            <div class="question question--active">
-              Pergunta
-            </div>
-            <div class="answer">Resposta</div>
-          </li>
-          <li>
-            <div class="question">
-              Pergunta
-            </div>
-            <div class="answer">Resposta</div>
-          </li>
-        </ul>
-        <a href="#" class="see-more">Veja mais</a>
+        <div class="col-12">
+          <h3 class="color--green">Perguntas frequentes.</h3>
+          <ul class="accordion">
+            <li class="accordion__item">
+              <div class="question">
+                Pergunta
+              </div>
+              <div class="answer">Resposta</div>
+            </li>
+            <li class="accordion__item">
+              <div class="question">
+                Pergunta
+              </div>
+              <div class="answer">Resposta</div>
+            </li>
+            <li class="accordion__item">
+              <div class="question">
+                Pergunta
+              </div>
+              <div class="answer">Resposta</div>
+            </li>
+            <li class="accordion__item">
+              <div class="question">
+                Pergunta
+              </div>
+              <div class="answer">Resposta</div>
+            </li>
+          </ul>
+          <a href="#" class="see-more color--purple product__link">Veja mais</a>
+        </div>
       </div>
     </div>
-    </div>
   </section>
-  <section class="section" id="contato">
+  <section class="section section--contact" id="contato">
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-12">
           <h3 class="color--purple text-center">Contato.</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12">
-          <div class="card card--square bg--purple">
-            <div class="row justify-content-center">
-              <div class="col-6">
-                <form>
-                <div class="input-group">
-                  <label for="">Seu nome (campo obrigatório)</label>
-                  <input type="text">
-                </div>
-                <div class="input-group">
-                  <label for="">Seu e-mail (campo obrigatório)</label>
-                  <input type="text">
-                </div>
-                <div class="input-group">
-                  <label for="">Sua mensagem</label>
-                  <textarea></textarea>
-                </div>
-                <div class="input-group">
-                  <button class="btn btn--green" type="submit"></button>
-                </div>
-              </form>
-              </div>
+      <div class="row justify-content-center bg--purple">
+        <div class="col-6">
+          <form class="product__form">
+            <div class="input-group">
+              <label for="name">Seu nome (campo obrigatório)</label>
+              <input id="name" type="text">
             </div>
-          </div>
+            <div class="input-group">
+              <label for="email">Seu e-mail (campo obrigatório)</label>
+              <input id="email" type="text">
+            </div>
+            <div class="input-group">
+              <label for="message">Sua mensagem</label>
+              <textarea id="message"></textarea>
+            </div>
+            <div class="input-group">
+              <button class="btn btn--green btn--uppercase" type="submit">enviar</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
@@ -256,16 +290,16 @@
 
 <footer class="footer">
   <div class="container-fluid">
-    <div class="row">
-      <div class="order-3 order-lg-1 col-12 offset-lg-2 col-lg-5">
-        <h5><em>A poluição indoor</em> existe.
+    <div class="row h-100">
+      <div class="order-3 order-lg-1 col-12 offset-lg-2 col-lg-6">
+        <h5><em>A poluição indoor</em> existe.<br>
         Quiet Pure ajuda você a deixar
         sua casa ou escritório protegidos.</h5>
-        <div class="footer__social d-none d-lg-block">
-          <a href="">Facebook</a>
-          <a href="">Instagram</a>
-          <a href="">Twitter</a>
-          <a href="">Youtube</a>
+        <div class="footer__social d-none d-lg-flex">
+          <a href=""><img src="assets/img/facebook-logo.svg" alt="facebook"></a>
+          <a href=""><img src="assets/img/instagram-logo.svg" alt="instagram"></a>
+          <a href=""><img src="assets/img/twitter-logo.svg" alt="twitter"></a>
+          <a href=""><img src="assets/img/youtube-logo.svg" alt="youtube"></a>
         </div>
       </div>
       <div class="order-1 order-lg-2 col-12 d-block d-lg-none">
@@ -276,7 +310,11 @@
           <a href="">Youtube</a>
         </div>
       </div>
-      <div class="order-2 order-lg-3 offset-1 col-2">Imagem</div>
+      <div class="order-2 order-lg-3 col-2 col-lg-3 d-lg-flex">
+        <div class="footer__image-wrapper">
+          <img class="footer__image" src="assets/img/quietpure-dog.png" alt="">
+        </div>
+      </div>
     </div>
   </div>
 </footer>
