style for mobile-991 completed

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             Sua casa está protegida?</h2>
           <h4>Elimine a Poluição Indoor agora com QuietPure</h4>
         </div>
-        <div class="order-3 col-6 offset-lg-6 ilustrative_image">
+        <div class="order-3 col-12 col-lg-6 offset-lg-6 ilustrative_image">
           <img src="assets/img/produto.png" alt="Produto da quiet pure">
         </div>
       </div>
@@ -67,9 +67,13 @@
   <section class="section product" id="o-produto">
     <div class="container-fluid product__intro">
       <div class="row justify-content-center">
-        <div class="col-6 offset-lg-7 col-lg-4">
+        <div class="col-6 offset-6 offset-lg-7 col-lg-4">
           <div class="product__text-wrapper product__text-wrapper--intro">
-            <h3 class="color--purple">Elimine até 99,97% da Poluição Indoor!</h3>
+            <h3 class="color--purple">
+              Elimine <br>
+              até 99,97% <br>
+              da Poluição <br>
+              Indoor!</h3>
             <p>Você sabia que ambientes internos podem abrigar muito mais poluição do que uma avenida na hora do rush? O purificador Quiet Pure foi projetado para eliminar a poluição indoor da sua casa ou escritório.</p>
           </div>
         </div>
@@ -93,7 +97,7 @@
           <p>Pouca gente sabe disso, mas a poluição do ar encontrada dentro de casa pode comprometer seriamente a sua saúde. Quando pensamos em poluição geralmente imaginamos aquela fumaça preta saindo de chaminés de fábricas ou escapamentos de carro. Mas a poluição indoor é causada por diversos fatores.</p>
         </div>
         <div class="col-12">
-          <div class="product__image">
+          <div class="product__image product__image--icon">
             <img src="assets/img/icones.png " alt="">
           </div>
         </div>
@@ -131,13 +135,14 @@
         </div>
         <div class="col-12">
           <div class="product__image product__image--pad-big">
-            <img src="assets/img/quietpure-operation.jpg" alt="">
+            <img class="d-lg-block d-none" src="assets/img/quietpure-operation.jpg" alt="">
+            <img class="d-block d-lg-none" src="assets/img/quietpure-operation-mobile.jpg" alt="">
           </div>
         </div>
         <div class="col-12">
           <div class="card card--crop bg--green">
             <div class="row justify-content-center">
-              <div class="col-6 offset-lg-1 col-lg-4">
+              <div class="col-8 offset-lg-1 col-lg-4">
                 <div class="product__text-wrapper product__text-wrapper--filter">
                   <h3>Troca do filtro.</h3>
                   <p>O purificador Quiet Pure exige muito pouca manutenção. O único item que necessita de troca periódica é o filtro HEPA. O Quiet Pure avisa, através de um indicador no painel, que é hora de fazer a troca de maneira simples e rápida. Você mesmo pode realizar a manutenção.</p>
@@ -151,7 +156,7 @@
             </div>
           </div>
         </div>
-        <div class="col-7 text-center">
+        <div class="col-12 col-lg-7 text-center">
           <div class="product__text-wrapper product__text-wrapper--room">
             <h3 class="color--purple">Elimine a Poluição Indoor agora.</h3>
             <p>O purificador de ar Quiet Pure foi projetado para cumprir uma única missão: eliminar a poluição indoor dos ambientes internos do nosso dia a dia.</p>
@@ -159,8 +164,9 @@
         </div>
       </div>
     </div>
-    <div class="product__image product__image--no-container">
-      <img src="assets/img/quietpure-room.jpg" alt="">
+    <div class="product__image product__image--room product__image--no-container">
+      <img class="d-none d-lg-block" src="assets/img/quietpure-room.jpg" alt="">
+      <img class="d-block d-lg-none" src="assets/img/quietpure-room-mobile.jpg" alt="">
     </div>
     <div class="container-fluid product__design">
       <div class="row justify-content-center">
@@ -194,7 +200,7 @@
                   <img src="assets/img/quietpure-dimension.jpg" alt="">
                 </div>
               </div>
-              <div class="offset-lg-1 col-6 col-lg-4">
+              <div class="offset-lg-1 col-7 col-lg-4">
                 <div class="product__text-wrapper product__text-wrapper--dimension">
                   <h3>Especificações técnicas.</h3>
                   <p>Fluxo de ar: 160 CFM<br>
@@ -272,7 +278,7 @@
         </div>
       </div>
       <div class="row justify-content-center bg--purple">
-        <div class="col-6">
+        <div class="col-10 col-lg-6">
           <form class="product__form">
             <div class="input-group">
               <label for="name">Seu nome (campo obrigatório)</label>
@@ -298,7 +304,7 @@
 
 <footer class="footer">
   <div class="container-fluid">
-    <div class="row h-100">
+    <div class="row h-100 justify-content-center">
       <div class="order-3 order-lg-1 col-12 offset-lg-2 col-lg-6">
         <h5><em>A poluição indoor</em> existe.<br>
         Quiet Pure ajuda você a deixar
@@ -312,13 +318,13 @@
       </div>
       <div class="order-1 order-lg-2 col-12 d-block d-lg-none">
         <div class="footer__social">
-          <a href="">Facebook</a>
-          <a href="">Instagram</a>
-          <a href="">Twitter</a>
-          <a href="">Youtube</a>
+          <a href=""><img src="assets/img/facebook-logo.svg" alt="facebook"></a>
+          <a href=""><img src="assets/img/instagram-logo.svg" alt="instagram"></a>
+          <a href=""><img src="assets/img/twitter-logo.svg" alt="twitter"></a>
+          <a href=""><img src="assets/img/youtube-logo.svg" alt="youtube"></a>
         </div>
       </div>
-      <div class="order-2 order-lg-3 col-2 col-lg-3 d-lg-flex">
+      <div class="order-2 order-lg-3 col-8 col-lg-3 d-lg-flex">
         <div class="footer__image-wrapper">
           <img class="footer__image" src="assets/img/quietpure-dog.png" alt="">
         </div>
